# grrs

./: Cargo.toml  README.md
src/: cli.rs  grrserror.rs  lib.rs  main.rs
tests/: cli.rs
