[package]
name = "grrs"
authors = ["Logan Jerrow <Logan.Jerrow@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
clap = { version = "3.2.17", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
indicatif = "0.17.0"
log = "0.4.17"
predicates = "2.1.1"
